--- a/app/views/organisations/_claim_banner.html.erb
+++ b/app/views/organisations/_claim_banner.html.erb
@@ -1,5 +1,6 @@
-<div id="messages">																
-	<p class='info'>
-		claim your organisation
+<div id="messages">
+	<p class='info bigtext centred'>
+		<strong>Are you an events organiser?</strong>
+		<%= link_to "claim your events", claim_org_path, :class => "awesome scheme-2 medium-b bump" %>
 	</p>
 </div>
