--- a/app/views/devise_mailer/invitation.html.erb
+++ b/app/views/devise_mailer/invitation.html.erb
@@ -1,8 +1,8 @@
 Hello <%= @resource.email %>!
 
-Someone has invited you to <%= root_url %>, you can accept it through the link below.
+We'd like to invite your organisation to The Business Diary, you can accept it through the link below.
 
-<%= link_to 'Accept invitation', accept_invitation_url(@resource, :invitation_token => @resource.invitation_token) %>
+<%= link_to 'Accept invitation', accept_invitation_url(@resource, :host => "thebusinessdiary.co.uk", :invitation_token => @resource.invitation_token) %>
 
 If you don't want to accept the invitation, please ignore this email.
 Your account won't be created until you access the link above and set your password.
