--- a/app/views/registrations/organisations/edit.html.erb
+++ b/app/views/registrations/organisations/edit.html.erb
@@ -3,17 +3,25 @@
 <% form_for resource_name, resource, :url => registration_path(resource_name), :html => { :method => :put } do |f| -%>
   <%= f.error_messages %>
 
+  <p><%= f.label :name, "Organisation Name" %></p>
+  <p><%= f.text_field :name %></p>
+
+  <p><%= f.label :url, "Website URL" %></p>
+  <p><%= f.text_field :url %></p>
+
   <p><%= f.label :email %></p>
   <p><%= f.text_field :email %></p>
 
+  <p><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i></p>
+  <p><%= f.password_field :current_password %></p>
+
+  <hr/>
+  
   <p><%= f.label :password %> <i>(leave blank if you don't want to change it)</i></p>
   <p><%= f.password_field :password %></p>
 
   <p><%= f.label :password_confirmation %></p>
   <p><%= f.password_field :password_confirmation %></p>
-
-  <p><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i></p>
-  <p><%= f.password_field :current_password %></p>
 
   <p><%= f.submit "Update" %></p>
 <% end -%>
