--- a/public/stylesheets/application2.css
+++ b/public/stylesheets/application2.css
@@ -279,6 +279,7 @@ h3.list-hd {
 	border-bottom: 1px solid rgba(0,0,0,0.25);
 	position: relative;
 	cursor: pointer;
+	border:0;
 }
 
 .awesome:hover, #user p.visitor a:hover			{ background-color: #111; color: #fff; }
