--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -25,7 +25,7 @@
           </a>
         </h1>
 
-		<%= render :partial => "layouts/auth_person" %>
+		<%= render :partial => "people/auth" %>
       </div>
           
       <div id="bd" role="main">
