--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,4 @@
-<% form_for @event, :url => organisation_events_path(@organisation) do |f| %>
+<% form_for @event, :url => organisation_events_path(@organisation), :html => {:class => 'organisation'} do |f| %>
   <% if @event.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
