--- a/app/views/organisations/_auth.html.erb
+++ b/app/views/organisations/_auth.html.erb
@@ -1,6 +1,6 @@
 <% unless organisation_signed_in? %>
 	<p class="visitor"><%= link_to "Claim organiser account", new_organisation_registration_url %> / <%= link_to "organiser sign in", new_organisation_session_url %></p>
 <% else %>
-	<p><span>Organisation: </span><strong><%= link_to current_organisation.name || current_organisation.email, organisation_path(current_organisation) %></strong><br />
+	<p><%= link_to 'My Events' || current_organisation.email, organisation_path(current_organisation), :class => 'awesome blue small' %></p>
 	<%= link_to "Sign out?", destroy_organisation_session_url %></p>
 <% end %>
