bugfix org banner

--- a/app/views/organisations/_banner_claim.html.erb
+++ b/app/views/organisations/_banner_claim.html.erb
@@ -2,7 +2,7 @@
 <div id="messages">
 	<p class='info bigtext centred'>
 		<strong>Are you an events organiser?</strong>
-		<%= link_to "claim your events", new_organisation_registration_url, :class => "awesome scheme-2 medium-b bump" %>
+		<%= link_to "Signup to manage your events", new_organisation_registration_url, :class => "awesome scheme-2 medium-b bump" %>
 	</p>
 </div>
 <% end %>
