wrong banner partial called!

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,4 +15,4 @@
 
 <%= render :partial => 'events/search' %>
 <%= render :partial => 'events/events_list', :locals => { :events => @events } %>
-<%= render :partial => 'organisations/banner' %>
+<%= render :partial => 'organisations/banner_claim' %>
